Fix search missing one genre, fix layout issues in search and overflow clip

--- a/websites/static/css/catalogue.css
+++ b/websites/static/css/catalogue.css
@@ -101,10 +101,6 @@
 	text-overflow: ellipsis;
 }
 
-.error-icon {
-	color: rgb(var(--error-color));
-}
-
 /* Player related logic */
 .player-popup {
 	position: relative;
