--- a/websites/static/css/news.css
+++ b/websites/static/css/news.css
@@ -69,7 +69,7 @@
 	font-family: "lexend_deca_bold", sans-serif;
 	text-align: left;
 	margin-top: 0;
-	margin-bottom: 0;
+	margin-bottom: 0.5rem;
 	font-size: 2.2rem;
 }
 
